--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
 
 /* elements */
 .scroll-item {
-  width: 33.3333%;
+  /* width: 33.3333%; */
   height: 240px;
   padding: 0 10px;
   background: var(--gray);
@@ -83,7 +83,7 @@ body {
   transition: all .5s;
 }
 
-@media(max-width: 991px){
+/* @media(max-width: 991px){
   .scroll-item{
     width: 50%;
   }
@@ -93,10 +93,10 @@ body {
   .scroll-item{
     width: 100%;
   }
-}
+} */
 
 .scroll-item img{
-  max-width: 100%;
+  width: 100%!important;
 }
 
 .scroll-item a{
