--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
 .levus-scroll-wrapper {
   padding: 50px 0 0;
   position: relative;
+  overflow: hidden;
 }
 
 /* arrow */
@@ -42,6 +43,7 @@ body {
   top: 10px;
   right: 10px;
   display: flex;
+  z-index: 9;
 }
 
 .levus-scroll-nav .left,
