--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ body {
 }
 
 /* wpapper */
-.levus-scroll-wrapper {
+.levus-scroll-wrapper,
+.levus-scroll-wrapper-2 {
   padding: 50px 0 0;
   position: relative;
   overflow: hidden;
