--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,14 @@ body {
 .levus-scroll {
   position: relative;
   overflow: hidden;
-  height: 300px;
+  height: 270px;
   z-index: 1;
+}
+
+@media(max-width: 400px){
+  .levus-scroll {
+    height: 320px;
+  }
 }
 
 /* elements */
@@ -86,6 +92,8 @@ body {
 
 .scroll-item img{
   width: 100%!important;
+  display: block;
+  margin: 0 0 10px;
 }
 
 .scroll-item a{
@@ -93,6 +101,8 @@ body {
   font-size: 14px;
   display: block;
   margin: 10px 0 0;
+  line-height: 1.3;
+  text-decoration: none;
 }
 
 .scroll-item a:hover{
